intTests/test_repl/file001.saw
// pure values should be rejected in files
3;
"abc";

